--- a/package.json
+++ b/package.json
@@ -1,10 +1,12 @@
 {
   "name": "portfolio",
   "version": "1.0.0",
+  "homepage": "https://arthurfontis.github.io/portfolio",
   "description": "Meu portfólio profissional",
   "main": "index.js",
   "scripts": {
     "start": "gulp",
+    "deploy": "gh-pages -d build" ,
     "test": "echo \"No test specified\" && exit 0"
   },
   "repository": {
@@ -22,8 +24,9 @@
     "@babel/core": "^7.27.3",
     "@babel/preset-env": "^7.27.2",
     "@fortawesome/fontawesome-free": "^6.7.2",
+    "gh-pages": "^6.3.0",
     "gulp": "^4.0.2",
-    "gulp-babel": "^7.0.1",
+    "gulp-babel": "^8.0.0",
     "gulp-concat": "^2.6.1",
     "gulp-htmlmin": "^4.0.0",
     "gulp-uglify": "^3.0.0",
